--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@ http://www.tooplate.com/view/2098-health
           <div class="container">
                <div class="row">
 
-                    <div class="col-md-4 col-sm-5">
-                         <p>بەخێربێیت بۆ پرۆفیشناڵترین داخیلی</p>
+                    <div class="col-md-4 col-sm-5 text-right">
+                         <p> بەخێربێیت بۆ پرۆفیشناڵترین داخیلی</p>
                     </div>
                          
                     <div class="col-md-8 col-sm-7 text-align-right">
                          <span class="phone-icon"><i class="fa fa-phone"></i> 010-060-0160</span>
-                         <span class="date-icon"><i class="fa fa-calendar-plus-o"></i> 24 کاژمێر کراوەیە (Mon-Fri)</span>
+                         <span class="date-icon"><i class="fa fa-calendar-plus-o"></i>      </span>
                          <span class="email-icon"><i class="fa fa-envelope-o"></i> <a href="#"> </a></span>
                     </div>
 
