--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
      <title>Daxily Azadi</title>
 <!--
 
@@ -45,12 +45,12 @@ http://www.tooplate.com/view/2098-health
                <div class="row">
 
                     <div class="col-md-4 col-sm-5 text-right">
-                         <p> بەخێربێیت بۆ پرۆفیشناڵترین داخیلی</p>
+                         <p> پـرۆفـیشـناڵتریـن داخیــلی</p>
                     </div>
                          
                     <div class="col-md-8 col-sm-7 text-align-right">
-                         <span class="phone-icon"><i class="fa fa-phone"></i> 010-060-0160</span>
-                         <span class="date-icon"><i class="fa fa-calendar-plus-o"></i>      </span>
+                         <span class="phone-icon"><i class="fa fa-phone"></i> 24/7 </span>
+                         <span class="date-icon"><i class="fa fa-calendar-plus-o"></i> هەمووکات کراوەیە </span>
                          <span class="email-icon"><i class="fa fa-envelope-o"></i> <a href="#"> </a></span>
                     </div>
 
@@ -71,18 +71,18 @@ http://www.tooplate.com/view/2098-health
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <a href="index.html" class="navbar-brand"><i class="fa fa-h-square"></i>ealth Center</a>
+                    <a href="index.html" class="navbar-brand"><i class="fa fa-h-square"></i> Daxily Center </a>
                </div>
 
                <!-- MENU LINKS -->
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                          <li><a href="#top" class="smoothScroll">Home</a></li>
-                         <li><a href="#about" class="smoothScroll">About Us</a></li>
-                         <li><a href="#team" class="smoothScroll">Doctors</a></li>
-                         <li><a href="#news" class="smoothScroll">News</a></li>
+                         <li><a href="#about" class="smoothScroll">About</a></li>
+                         <li><a href="#team" class="smoothScroll">گەنجە مەردەکان</a></li>
+                         <li><a href="#news" class="smoothScroll">هەواڵ</a></li>
                          <li><a href="#google-map" class="smoothScroll">Contact</a></li>
-                         <li class="appointment-btn"><a href="#appointment">Make an appointment</a></li>
+                         <li class="appointment-btn"><a href="#appointment">Login/Rigster</a></li>
                     </ul>
                </div>
 
