--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@ http://www.tooplate.com/view/2098-health
                     </div>
                          
                     <div class="col-md-8 col-sm-7 text-align-right">
-                         <span class="phone-icon"><i class="fa fa-phone"></i> 24/7 </span>
-                         <span class="date-icon"><i class="fa fa-calendar-plus-o"></i> هەمووکات کراوەیە </span>
+                         <span class="phone-icon"><i class="fa fa-snapchat"></i> dev.muhamad </span>
+                         <span class="date-icon"><i class="fa fa-time"></i> هەمووکات کراوەیە </span>
                          <span class="email-icon"><i class="fa fa-envelope-o"></i> <a href="#"> </a></span>
                     </div>
 
@@ -77,12 +77,12 @@ http://www.tooplate.com/view/2098-health
                <!-- MENU LINKS -->
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                         <li><a href="#top" class="smoothScroll">Home</a></li>
-                         <li><a href="#about" class="smoothScroll">About</a></li>
+                         <li><a href="#top" class="smoothScroll">سەرەکی</a></li>
+                         <li><a href="#about" class="smoothScroll">زانیاری</a></li>
                          <li><a href="#team" class="smoothScroll">گەنجە مەردەکان</a></li>
                          <li><a href="#news" class="smoothScroll">هەواڵ</a></li>
-                         <li><a href="#google-map" class="smoothScroll">Contact</a></li>
-                         <li class="appointment-btn"><a href="#appointment">Login/Rigster</a></li>
+                         <li><a href="#google-map" class="smoothScroll">پەیوەندی</a></li>
+                         <li class="appointment-btn"><a href="#appointment">داخیل بوونی داخیلی</a></li>
                     </ul>
                </div>
 
