--- a/index.html
+++ b/index.html
@@ -71,18 +71,18 @@ http://www.tooplate.com/view/2098-health
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <a href="index.html" class="navbar-brand"><i class="fa fa-h-square"></i> Daxily Center </a>
+                    <a href="index.html" class="navbar-brand"><i class="fa fa-build"></i> Daxily Center </a>
                </div>
 
                <!-- MENU LINKS -->
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                          <li><a href="#top" class="smoothScroll">سەرەکی</a></li>
-                         <li><a href="#about" class="smoothScroll">زانیاری</a></li>
+                         <li><a href="#about" class="smoothScroll">داخیلی</a></li>
                          <li><a href="#team" class="smoothScroll">گەنجە مەردەکان</a></li>
                          <li><a href="#news" class="smoothScroll">هەواڵ</a></li>
                          <li><a href="#google-map" class="smoothScroll">پەیوەندی</a></li>
-                         <li class="appointment-btn"><a href="#appointment">داخیل بوونی داخیلی</a></li>
+                         <li class="appointment-btn"><a href="#appointment">تۆماربوون</a></li>
                     </ul>
                </div>
 
@@ -101,7 +101,7 @@ http://www.tooplate.com/view/2098-health
                                         <div class="col-md-offset-1 col-md-10">
                                              <h3>Let's make your life happier</h3>
                                              <h1>Healthy Living</h1>
-                                             <a href="#team" class="section-btn btn btn-default smoothScroll">Meet Our Doctors</a>
+                                             <a href="#team" class="section-btn btn btn-default smoothScroll">گەنجەکان</a>
                                         </div>
                                    </div>
                               </div>
@@ -111,7 +111,7 @@ http://www.tooplate.com/view/2098-health
                                         <div class="col-md-offset-1 col-md-10">
                                              <h3>Aenean luctus lobortis tellus</h3>
                                              <h1>New Lifestyle</h1>
-                                             <a href="#about" class="section-btn btn btn-default btn-gray smoothScroll">More About Us</a>
+                                             <a href="#about" class="section-btn btn btn-default btn-gray smoothScroll">داخیلی</a>
                                         </div>
                                    </div>
                               </div>
@@ -121,7 +121,7 @@ http://www.tooplate.com/view/2098-health
                                         <div class="col-md-offset-1 col-md-10">
                                              <h3>Pellentesque nec libero nisi</h3>
                                              <h1>Your Health Benefits</h1>
-                                             <a href="#news" class="section-btn btn btn-default btn-blue smoothScroll">Read Stories</a>
+                                             <a href="#news" class="section-btn btn btn-default btn-blue smoothScroll">هەواڵ</a>
                                         </div>
                                    </div>
                               </div>
@@ -139,16 +139,16 @@ http://www.tooplate.com/view/2098-health
 
                     <div class="col-md-6 col-sm-6">
                          <div class="about-info">
-                              <h2 class="wow fadeInUp" data-wow-delay="0.6s">Welcome to Your <i class="fa fa-h-square"></i>ealth Center</h2>
+                              <h2 class="wow fadeInUp" data-wow-delay="0.6s">Baxerbey bo <i class="fa fa-D-square"></i>axily azadi</h2>
                               <div class="wow fadeInUp" data-wow-delay="0.8s">
-                                   <p>Aenean luctus lobortis tellus, vel ornare enim molestie condimentum. Curabitur lacinia nisi vitae velit volutpat venenatis.</p>
-                                   <p>Sed a dignissim lacus. Quisque fermentum est non orci commodo, a luctus urna mattis. Ut placerat, diam a tempus vehicula.</p>
+                                   <p>ئەم داخیلیە تایبەت کراوە بە گەنجە مەردەکان.</p>
+                                   <p>بەتایبدت تابقی سەرەوە</p>
                               </div>
                               <figure class="profile wow fadeInUp" data-wow-delay="1s">
                                    <img src="images/author-image.jpg" class="img-responsive" alt="">
                                    <figcaption>
-                                        <h3>Dr. Neil Jackson</h3>
-                                        <p>General Principal</p>
+                                        <h3>Kak Jegr</h3>
+                                        <p>Xawan Daxily</p>
                                    </figcaption>
                               </figure>
                          </div>
@@ -166,7 +166,7 @@ http://www.tooplate.com/view/2098-health
 
                     <div class="col-md-6 col-sm-6">
                          <div class="about-info">
-                              <h2 class="wow fadeInUp" data-wow-delay="0.1s">Our Doctors</h2>
+                              <h2 class="wow fadeInUp" data-wow-delay="0.1s">گەنجە مەردەکانی داخیلی</h2>
                          </div>
                     </div>
 
@@ -174,14 +174,14 @@ http://www.tooplate.com/view/2098-health
 
                     <div class="col-md-4 col-sm-6">
                          <div class="team-thumb wow fadeInUp" data-wow-delay="0.2s">
-                              <img src="images/team-image1.jpg" class="img-responsive" alt="">
+                              <img src="https://cdn.discordapp.com/attachments/877239607362719744/1455529746799792346/IMG_8511.png?ex=69550f36&is=6953bdb6&hm=dacd45ed77b1f248d531aeb7a89db84a62eb148f3ee825e9876070b89940f920&" class="img-responsive" alt="">
 
                                    <div class="team-info">
-                                        <h3>Nate Baston</h3>
-                                        <p>General Principal</p>
+                                        <h3>Baiz Bnaslaway</h3>
+                                        <p>IT</p>
                                         <div class="team-contact-info">
-                                             <p><i class="fa fa-phone"></i> 010-020-0120</p>
-                                             <p><i class="fa fa-envelope-o"></i> <a href="#">general@company.com</a></p>
+
+                                             <p><i class="fa fa-envelope-o"></i> <a href="#">گەنجە دەم بەزەردەخەنەکەی داخیلی</a></p>
                                         </div>
                                         <ul class="social-icon">
                                              <li><a href="#" class="fa fa-linkedin-square"></a></li>
