--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@ http://www.tooplate.com/view/2098-health
                <!-- MENU LINKS -->
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                         <li><a href="#top" class="smoothScroll">سەرەکی</a></li>
-                         <li><a href="#about" class="smoothScroll">داخیلی</a></li>
-                         <li><a href="#team" class="smoothScroll">گەنجەکان</a></li>
-                         <li><a href="#news" class="smoothScroll">هەواڵ</a></li>
-                         <li><a href="#google-map" class="smoothScroll">پەیوەندی</a></li>
-                         <li class="appointment-btn"><a href="#appointment">تۆماربوون</a></li>
+                         <li><a href="#top" class="smoothScroll">Malpar</a></li>
+                         <li><a href="#about" class="smoothScroll">Daxily Azadi</a></li>
+                         <li><a href="#team" class="smoothScroll">Ganjakan</a></li>
+                         <li><a href="#news" class="smoothScroll">Hawal</a></li>
+                         <li><a href="#google-map" class="smoothScroll">Contact</a></li>
+                         <li class="appointment-btn"><a href="#appointment">Login/Rigster</a></li>
                     </ul>
                </div>
 
@@ -91,7 +91,7 @@ http://www.tooplate.com/view/2098-health
 
 
      <!-- HOME -->
-     <section id="home" class="slider" data-stellar-background-ratio="0.5">
+     <section id="home" class="slider" data-stellar-background-ratio="0.2">
           <div class="container">
                <div class="row">
 
