--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ http://www.tooplate.com/view/2098-health
                                    <div class="caption">
                                         <div class="col-md-offset-1 col-md-10">
                                              <h3>Hawaly taza</h3>
-                                             <h1> Dawrey Konkan </h1>
+                                             <h1> Dawray Konkan </h1>
                                              <a href="#news" class="section-btn btn btn-default btn-blue smoothScroll">هــــەواڵ</a>
                                         </div>
                                    </div>
