--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ http://www.tooplate.com/view/2098-health
                <div class="row">
 
                     <div class="col-md-4 col-sm-5">
-                         <p>Profeshnaltren Daxily</p>
+                         <p>           Profeshnaltren Daxily</p>
                     </div>
                          
                     <div class="col-md-8 col-sm-7 ">
@@ -71,7 +71,7 @@ http://www.tooplate.com/view/2098-health
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <a href="index.html" class="navbar-brand"><i class="fa fa-House"></i> Daxily Center </a>
+                    <a href="index.html" class="navbar-brand"><i class="fa fa-home"></i> Daxily Center </a>
                </div>
 
                <!-- MENU LINKS -->
@@ -109,9 +109,9 @@ http://www.tooplate.com/view/2098-health
                               <div class="item item-second">
                                    <div class="caption">
                                         <div class="col-md-offset-1 col-md-10">
-                                             <h3>Zyatr bzana lasar zhyani daxilu</h3>
+                                             <h3>xosh bzhii</h3>
                                              <h1>Zhyani Daxily</h1>
-                                             <a href="#about" class="section-btn btn btn-default btn-gray smoothScroll">داخــیــلــی</a>
+                                             <a href="#about" class="section-btn btn btn-default btn-orange smoothScroll">داخــیــلــی</a>
                                         </div>
                                    </div>
                               </div>
