--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ http://www.tooplate.com/view/2098-health
                                         <div class="col-md-offset-1 col-md-10">
                                              <h3>Lerawa zyatr mardba</h3>
                                              <h1>Ganja mardakany daxily bbena</h1>
-                                             <a href="#team" class="section-btn btn btn-default smoothScroll">گــەنـجـەکــان</a>
+                                             <a href="#team" class="kurdi-font btn btn-default smoothScroll">گــەنـجـەکــان</a>
                                         </div>
                                    </div>
                               </div>
@@ -111,7 +111,7 @@ http://www.tooplate.com/view/2098-health
                                         <div class="col-md-offset-1 col-md-10">
                                              <h3>xosh bzhii</h3>
                                              <h1>Zhyani Daxily</h1>
-                                             <a href="#about" class="section-btn btn btn-default btn-orange smoothScroll">داخــیــلــی</a>
+                                             <a href="#about" class="kurdi-font btn btn-default btn-orange smoothScroll">داخــیــلــی</a>
                                         </div>
                                    </div>
                               </div>
@@ -121,7 +121,7 @@ http://www.tooplate.com/view/2098-health
                                         <div class="col-md-offset-1 col-md-10">
                                              <h3>Hawaly taza</h3>
                                              <h1> Dawray Konkan </h1>
-                                             <a href="#news" class="section-btn btn btn-default btn-blue smoothScroll">هــــەواڵ</a>
+                                             <a href="#news" class="kurdi-font btn btn-default btn-blue smoothScroll">هــــەواڵ</a>
                                         </div>
                                    </div>
                               </div>
