--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@ http://www.tooplate.com/view/2098-health
                          <div class="owl-carousel owl-theme">
                               <div class="item item-first">
                                    <div class="caption">
-                                        <div class="col-md-offset-1 col-md-10">
-                                             <h3>Lerawa zyatr mardba</h3>
-                                             <h1>Ganja mardakany daxily bbena</h1>
+                                        <div class="col-md-offset-1 col-md-10 kurdi-font">
+                                             <h3>لێرەوە زیاتر مەردبە</h3>
+                                             <h1>گەنجە مەردەکانی داخیلی ببینە</h1>
                                              <a href="#team" class="kurdi-font btn btn-default smoothScroll">گــەنـجـەکــان</a>
                                         </div>
                                    </div>
