--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ http://www.tooplate.com/view/2098-health
                               <div class="item item-first">
                                    <div class="caption">
                                         <div class="col-md-offset-1 col-md-10 kurdi-font">
-                                             <h2>لێرەوە زیاتر مەردبە</h2>
+                                             <h3>لێرەوە زیاتر مەردبە</h3>
                                              <h1>گەنجە مەردەکانی داخیلی ببینە</h1>
                                              <a href="#team" class="kurdi-font btn btn-default smoothScroll">گــەنـجـەکــان</a>
                                         </div>
@@ -108,10 +108,10 @@ http://www.tooplate.com/view/2098-health
 
                               <div class="item item-second">
                                    <div class="caption">
-                                        <div class="col-md-offset-1 col-md-10">
-                                             <h3>xosh bzhii</h3>
-                                             <h1>Zhyani Daxily</h1>
-                                             <a href="#about" class="kurdi-font btn btn-default btn-orange smoothScroll">داخــیــلــی</a>
+                                        <div class="col-md-offset-1 col-md-10 kurdi-font">
+                                             <h3>خۆش بژی</h3>
+                                             <h1>لـەگــەل ئـێـمە</h1>
+                                             <a href="#about" class="kurdi-font btn btn-default btn-orange smoothScroll">داخیلی</a>
                                         </div>
                                    </div>
                               </div>
@@ -119,9 +119,9 @@ http://www.tooplate.com/view/2098-health
                               <div class="item item-third">
                                    <div class="caption">
                                         <div class="col-md-offset-1 col-md-10">
-                                             <h3>Hawaly taza</h3>
-                                             <h1> Dawray Konkan </h1>
-                                             <a href="#news" class="kurdi-font btn btn-default btn-blue smoothScroll">هــــەواڵ</a>
+                                             <h3>داخیلی کافێ</h3>
+                                             <h1> دەوری کـۆنـکان </h1>
+                                             <a href="#news" class="kurdi-font btn btn-default btn-blue smoothScroll">بـەژداربــە</a>
                                         </div>
                                    </div>
                               </div>
