--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ http://www.tooplate.com/view/2098-health
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <a href="index.html" class="navbar-brand"><i class="fa fa-home"></i> Daxily Center </a>
+                    <a href="index.html" class="navbar-brand"><i class="fa fa-home"></i> مەڵبەندی داخیلی ئازادی </a>
                </div>
 
                <!-- MENU LINKS -->
