--- a/index.html
+++ b/index.html
@@ -71,18 +71,18 @@ http://www.tooplate.com/view/2098-health
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <a href="index.html" class="navbar-brand"><i class="fa fa-home"></i> مەڵبەندی داخیلی ئازادی </a>
+                    <a href="index.html" class="navbar-brand"><i class="fa fa-home kurdi-font"></i> مەڵبەندی داخیلی ئازادی </a>
                </div>
 
                <!-- MENU LINKS -->
                <div class="collapse navbar-collapse">
-                    <ul class="nav navbar-nav navbar-right">
-                         <li><a href="#top" class="smoothScroll">Malpar</a></li>
-                         <li><a href="#about" class="smoothScroll">Daxily Azadi</a></li>
-                         <li><a href="#team" class="smoothScroll">Ganjakan</a></li>
-                         <li><a href="#news" class="smoothScroll">Hawal</a></li>
-                         <li><a href="#google-map" class="smoothScroll">Contact</a></li>
-                         <li class="appointment-btn"><a href="#appointment">Login/Rigster</a></li>
+                    <ul class="nav navbar-nav navbar-right kurdi-font">
+                         <li><a href="#top" class="smoothScroll">ماڵپەر</a></li>
+                         <li><a href="#about" class="smoothScroll">داخیلی ئازادی</a></li>
+                         <li><a href="#team" class="smoothScroll">گەنجانی داخیلی</a></li>
+                         <li><a href="#news" class="smoothScroll">زانیاری دەوریەکان</a></li>
+                         <li><a href="#google-map" class="smoothScroll">ئادمین</a></li>
+                         <li class="appointment-btn"><a href="#appointment">خۆت تۆماربکە</a></li>
                     </ul>
                </div>
 
