--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ http://www.tooplate.com/view/2098-health
 
                                    <div class="team-info">
                                         <h3>بایز بنەسڵاوەی</h3>
-                                        <p>گەنجە دەم بەپێکەنین و خەماویەکەی داخیلی، ماتۆر سوارە</p>
+                                        <p>گەنجە دەم بەپێکەنین و خەماویەکەی داخیلی کاک بایزی بنەسلاوەی کورێکی خۆشــە وێیستە جگەلەوەش، ماتۆر سوارە</p>
                                         <div class="team-contact-info">
 
                                              <p><i class="fa fa-snapchat"></i> <a href="#"> ...  </a></p>
@@ -197,8 +197,8 @@ http://www.tooplate.com/view/2098-health
                               <img src="https://cdn.discordapp.com/attachments/877239607362719744/1455536019469373636/IMG_8478.jpg?ex=6955150d&is=6953c38d&hm=a4320e4ca4c1ceb4848cb2abb0d95eb05ada3701d2698ad5da13dbede29bd76f&" class="img-responsive" alt="">
 
                                    <div class="team-info">
-                                        <h3>Jمەلا جیهادی زێباری</h3>
-                                        <p>ئەمەش گەنجە خواناسەکەی داخیلی و نوێنەری کچان </p>
+                                        <h3>مەلا جیهادی زێباری</h3>
+                                        <p>ئەمەش گەنجە خواناسەکەی داخیلی، بە رەسەنەکەی داخیلی ناسراوە گەنجێکی خۆشەویستە </p>
                                         <div class="team-contact-info">
                                              <p><i class="fa fa-snapchat"></i> ...</p>
           
@@ -258,7 +258,7 @@ http://www.tooplate.com/view/2098-health
                               </a>
                               <div class="news-info">
                                    <span>دوای فایناڵ</span>
-                                   <h3><a href="news-detail.html">دەوری کۆنکان</a></h3>
+                                   <h3><a href="news-detail.html"> </a></h3>
                                    <p>دەوریە خۆشەکەی داخیلی دوایی فایناڵ دەکرێتەوە. تایبەت بە تابقی سەرەوەی داخیلی ئازادی، بەژداربوون بەخۆراییە!</p>
                                    <div class="author">
                                         <img src="images/author-image.jpg" class="img-responsive" alt="">
@@ -278,15 +278,15 @@ http://www.tooplate.com/view/2098-health
                               <a href="news-detail.html">
                                    <img src="images/news-image2.jpg" class="img-responsive" alt="">
                               </a>
-                              <div class="news-info kurdi-font">
+                              <div class="news-info">
                                    <span></span>
-                                   <h3><a href="شەوانی ئازادی</a></h3>
+                                   <h3><a href=">شەەوانی ئازادی </a></h3>
                                    <p>لەدوای 12شەو مەردەکانی داخیلی کۆدەبنەو بەگۆرانی و مەقام پێشکەش کردن و لەگەل مورتەبات.</p>
                                    <div class="author">
                                         <img src="images/author-image.jpg" class="img-responsive" alt="">
                                         <div class="author-info">
-                                             <h5>3</h5>
-                                             <p>2</p>
+                                             <h5> </h5>
+                                             <p> </p>
                                         </div>
                                    </div>
                               </div>
@@ -340,12 +340,12 @@ http://www.tooplate.com/view/2098-health
                               <div class="wow fadeInUp" data-wow-delay="0.8s">
                                    <div class="col-md-6 col-sm-6">
                                         <label for="name">ناو</label>
-                                        <input type="text" class="form-control" id="name" name="name" placeholder="Full Name">
+                                        <input type="text" class="form-control" id="name" name="name" placeholder=" ">
                                    </div>
 
                                    <div class="col-md-6 col-sm-6">
                                         <label for="email">ئیمێل</label>
-                                        <input type="email" class="form-control" id="email" name="email" placeholder="Your Email">
+                                        <input type="email" class="form-control" id="email" name="email" placeholder=" ">
                                    </div>
 
                                    <div class="col-md-6 col-sm-6">
@@ -356,7 +356,7 @@ http://www.tooplate.com/view/2098-health
                                    <div class="col-md-6 col-sm-6">
                                         <label for="select">بەشەکەت</label>
                                         <select class="form-control">
-                                             <option>پەرستاری/option>
+                                             <option>پەرستاری</option>
                                              <option>IT</option>
                                              <option>شیکاری نەخۆشی</option>
                                              <option>کارگێری</option>
@@ -365,10 +365,10 @@ http://www.tooplate.com/view/2098-health
 
                                    <div class="col-md-12 col-sm-12">
                                         <label for="telephone">پاسۆرد</label>
-                                        <input type="tel" class="form-control" id="phone" name="phone" placeholder="Phone">
-                                        <label for="Message">Additional Message</label>
+                                        <input type="tel" class="form-control" id="phone" name="phone" placeholder="Passowrd">
+                                        <label for="Message">وەسفی خۆت بکە</label>
                                         <textarea class="form-control" rows="5" id="message" name="message" placeholder="Message"></textarea>
-                                        <button type="submit" class="form-control" id="cf-submit" name="submit">Submit Button</button>
+                                        <button type="submit" class="form-control" id="cf-submit" name="submit">بـا بـڕوا</button>
                                    </div>
                               </div>
                         </form>
