--- a/index.html
+++ b/index.html
@@ -139,16 +139,16 @@ http://www.tooplate.com/view/2098-health
 
                     <div class="col-md-6 col-sm-6">
                          <div class="about-info">
-                              <h2 class="wow fadeInUp" data-wow-delay="0.6s">| <i class="fa fa-D-square"></i>axily azadi</h2>
+                              <h2 class="wow fadeInUp" data-wow-delay="0.6s">| <i class="fa fa-school kurdi-font"></i>داخیلی ئازادی</h2>
                               <div class="wow fadeInUp kurdi-font" data-wow-delay="0.8s">
-                                   <p>ئەم داخیلیە تایبەت بە گەنجە مەردەکانە</p>
-                                   <p>بەتایبەتی تابقی سەرەوە</p>
+                                   <p>ئەم داخیلیە تایبەت بە گەنجە مەردەکان</p>
+                                   <p> بەتایبەتی تابقی سەرەوە بەمزووانە زانیاری زیاتر</p>
                               </div>
                               <figure class="profile wow fadeInUp" data-wow-delay="1s">
                                    <img src="images/author-image.jpg" class="img-responsive" alt="">
                                    <figcaption>
-                                        <h3>بەمزووانە زانیاری زیاتر...</h3>
-                                        <p>...</p>
+                                        <h3></h3>
+                                        <p></p>
                                    </figcaption>
                               </figure>
                          </div>
@@ -178,7 +178,7 @@ http://www.tooplate.com/view/2098-health
 
                                    <div class="team-info">
                                         <h3>بایز بنەسڵاوەی</h3>
-                                        <p>گەنجە دەم بەپێکەنین و خەماویەکەی داخیلی کاک بایزی بنەسلاوەی کورێکی خۆشــە وێیستە جگەلەوەش، ماتۆر سوارە</p>
+                                        <p>گەنجە دەم بەپێکەنین و خەماویەکەی داخیلی کاک بایزی بنەسلاوەی کورێکی خۆشــە وێیستە سڵاو ریزمان هیە بۆی، ماتۆر سوارە</p>
                                         <div class="team-contact-info">
 
                                              <p><i class="fa fa-snapchat"></i> <a href="#"> ...  </a></p>
@@ -198,9 +198,9 @@ http://www.tooplate.com/view/2098-health
 
                                    <div class="team-info">
                                         <h3>مەلا جیهادی زێباری</h3>
-                                        <p>ئەمەش گەنجە خواناسەکەی داخیلی، بە رەسەنەکەی داخیلی ناسراوە گەنجێکی خۆشەویستە </p>
+                                        <p>ئەمەش گەنجە خواناسەکەی داخیلی، بە رەسەنەکەی داخیلی ناسراوە گەنجێکی خۆشەویستە رێزمان هەیە بۆی </p>
                                         <div class="team-contact-info">
-                                             <p><i class="fa fa-snapchat"></i> ...</p>
+                                             <p><i class="fa fa-snapchat"></i> </p>
           
                                         </div>
                                         <ul class="social-icon">
@@ -219,9 +219,9 @@ http://www.tooplate.com/view/2098-health
 
                                    <div class="team-info">
                                         <h3>وەلید ئەوائیل</h3>
-                                        <p>ئەە گەنجەی هەموومان خۆشمان دەوێت تەمەنی 17 ساڵە</p>
+                                        <p>ئەە گەنجەی هەموومان خۆشمان دەوێت تەمەنی 17 ساڵە، گەنجێکی ناسراوە لەداخیلی رێزمان هەیە بۆی</p>
                                         <div class="team-contact-info">
-                                             <p><i class="fa fa-snapchat"></i> حەزناکات</p>
+                                             <p><i class="fa fa-snapchat"></i> </p>
                                           
                                         </div>
                                         <ul class="social-icon">
@@ -257,8 +257,8 @@ http://www.tooplate.com/view/2098-health
                                    <img src="images/news-image1.jpg" class="img-responsive" alt="">
                               </a>
                               <div class="news-info">
-                                   <span>دوای فایناڵ</span>
-                                   <h3><a href="news-detail.html"> </a></h3>
+                                   <span></span>
+                                   <h3><a href="news-detail.html">دەوری کۆنکان </a></h3>
                                    <p>دەوریە خۆشەکەی داخیلی دوایی فایناڵ دەکرێتەوە. تایبەت بە تابقی سەرەوەی داخیلی ئازادی، بەژداربوون بەخۆراییە!</p>
                                    <div class="author">
                                         <img src="images/author-image.jpg" class="img-responsive" alt="">
