--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@ http://www.tooplate.com/view/2098-health
             3. Click "Share" and choose "Embed map" tab
             4. Copy only URL and paste it within the src="" field below
 	-->
-          <iframe src="https://maps.app.goo.gl/HMGULpiUGSYNe4kB9?g_st=ipc" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <iframe src="https://www.google.com/maps?q=36.6707207,44.5422283&hl=ar&z=18&output=embed" width="100%" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
      </section>           
 
 
@@ -410,7 +410,7 @@ http://www.tooplate.com/view/2098-health
 
                     <div class="col-md-4 col-sm-4"> 
                          <div class="footer-thumb"> 
-                              <h4 class="wow fadeInUp" data-wow-delay="0.4s">Latest News</h4>
+                              <h4 class="wow fadeInUp" data-wow-delay="0.4s">نوێنەر</h4>
                               <div class="latest-stories">
                                    <div class="stories-image">
                                         <a href="#"><img src="images/news-image.jpg" class="img-responsive" alt=""></a>
