--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@ http://www.tooplate.com/view/2098-health
                          <p>پرۆفیشناڵترین داخیلی لەشەرقل ئەوسەط</p>
                     </div>
                          
-                    <div class="col-md-8 col-sm-7 ">
+                   /* <div class="col-md-8 col-sm-7 ">
                          <span class="phone-icon"><i class="fa fa-snapchat kurdi-font"></i>Dev.Muhamad </span>
-                         <span class="date-icon"><i class="fa fa-watch kurdi-font"></i>هەمووکات کراوەیە</span>
+                         <span class="date-icon"><i class="fa fa-watch kurdi-font"></i>هەمووکات کراوەیە</span> *\
                       
                     </div>
 
