--- a/index.html
+++ b/index.html
@@ -47,12 +47,6 @@ http://www.tooplate.com/view/2098-health
                     <div class="col-md-4 col-sm-5 kurdi-font">
                          <p>پرۆفیشناڵترین داخیلی لەشەرقل ئەوسەط</p>
                     </div>
-                         
-                   /* <div class="col-md-8 col-sm-7 ">
-                         <span class="phone-icon"><i class="fa fa-snapchat kurdi-font"></i>Dev.Muhamad </span>
-                         <span class="date-icon"><i class="fa fa-watch kurdi-font"></i>هەمووکات کراوەیە</span> *\
-                      
-                    </div>
 
                </div>
           </div>
@@ -280,7 +274,7 @@ http://www.tooplate.com/view/2098-health
                               </a>
                               <div class="news-info">
                                    <span></span>
-                                   <h3><a href=">شەەوانی ئازادی </a></h3>
+                                   <h3><a href="news-detail.html">شەەوانی ئازادی </a></h3>
                                    <p>لەدوای 12شەو مەردەکانی داخیلی کۆدەبنەو بەگۆرانی و مەقام پێشکەش کردن و لەگەل مورتەبات.</p>
                                    <div class="author">
                                         <img src="images/author-image.jpg" class="img-responsive" alt="">
