--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ http://www.tooplate.com/view/2098-health
                               </a>
                               <div class="news-info">
                                    <span></span>
-                                   <h3><a href="news-detail.html">شەەوانی ئازادی </a></h3>
+                                   <h3><a href="news-detail.html">شەوانی ئازادی </a></h3>
                                    <p>لەدوای 12شەو مەردەکانی داخیلی کۆدەبنەو بەگۆرانی و مەقام پێشکەش کردن و لەگەل مورتەبات.</p>
                                    <div class="author">
                                         <img src="images/author-image.jpg" class="img-responsive" alt="">
@@ -414,23 +414,12 @@ http://www.tooplate.com/view/2098-health
                                         <span>اسماعیل خەیلانی</span>
                                    </div>
                               </div>
-
-                              <div class="latest-stories">
-                                   <div class="stories-image">
-                                        <a href="#"><img src="images/news-imag.jpg" class="img-responsive" alt=""></a>
-                                   </div>
-                                   <div class="stories-info">
-                                        <a href="#"><h5> </h5></a>
-                                        <span> </span>
-                                   </div>
-                              </div>
-                         </div>
                     </div>
 
                     <div class="col-md-4 col-sm-4"> 
                          <div class="footer-thumb">
                               <div class="opening-hours">
-                                   <h4 class="wow fadeInUp" data-wow-delay="0.4s">کەتەکانی داخیلی</h4>
+                                   <h4 class="wow fadeInUp" data-wow-delay="0.4s">کاتەکانی داخیلی</h4>
                                    <p>شەمە تا هەینی <span>06:00 AM - 10:00 PM</span></p>
                                    <p>رۆژانی پشوو داخراوە <span> </span></p>
                                    <p>  <span>Closed</span></p>
