--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ http://www.tooplate.com/view/2098-health
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <a href="index.html" class="navbar-brand"><i class="fa fa-home kurdi-font"></i> مەڵبەندی داخیلی ئازادی </a>
+                    <a href="index.html" class="navbar-brand"><i class="fa fa-home kurdi-font"></i> مەڵبەندی داخیلی ئازادی کوران </a>
                </div>
 
                <!-- MENU LINKS -->
@@ -296,7 +296,7 @@ http://www.tooplate.com/view/2098-health
                               <div class="news-info">
                                    <span></span>
                                    <h3><a href="news-detail.html">دیوەخانی رەسەنایەتی</a></h3>
-                                   <p>بۆ سولح و کۆبوونەوەی الخێزانی.</p>
+                                   <p>بۆ سولح و کۆبوونەوەی الخێزانی، تاوتوێ کردنی سیاسەت مێژوو ئەدەب زۆریتر لەشەوانی چوارشەمە پێنجشەمە تایبەت بۆ ئەوانەی نارۆنەوە لەداخیلی دەمێنەوە.</p>
                                    <div class="author">
                                         <img src="images/author-image.jpg" class="img-responsive" alt="">
                                         <div class="author-info">
