--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ http://www.tooplate.com/view/2098-health
 
                                    <div class="col-md-12 col-sm-12">
                                         <label for="telephone">پاسۆرد</label>
-                                        <input type="tel" class="form-control" id="phone" name="phone" placeholder="Passowrd">
+                                        <input type="tel" class="form-control" id="phone" name="phone" placeholder="Password">
                                         <label for="Message">وەسفی خۆت بکە</label>
                                         <textarea class="form-control" rows="5" id="message" name="message" placeholder="Message"></textarea>
                                         <button type="submit" class="form-control" id="cf-submit" name="submit">بـا بـڕوا</button>
@@ -393,7 +393,7 @@ http://www.tooplate.com/view/2098-health
                     <div class="col-md-4 col-sm-4">
                          <div class="footer-thumb"> 
                               <h4 class="wow fadeInUp" data-wow-delay="0.4s">داخیلی ئازادی</h4>
-                              <p>نانیشانمان دیارە بۆ میوان و میوانداری پەیوەندی بکە ئامادەین.</p>
+                              <p>ناونیشانمان دیارە بۆ میوان و میوانداری پەیوەندی بکە ئامادەین.</p>
 
                               <div class="contact-info">
                                    <p><i class="fa fa-phone"></i> 7509628683</p>
