--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@ Template 2098 Health
 http://www.tooplate.com/view/2098-health
 
 -->
+
+<canvas id="snow"></canvas>
+
      <meta charset="UTF-8">
      <meta http-equiv="X-UA-Compatible" content="IE=Edge">
      <meta name="description" content="">
@@ -469,6 +472,73 @@ http://www.tooplate.com/view/2098-health
      <script src="js/smoothscroll.js"></script>
      <script src="js/owl.carousel.min.js"></script>
      <script src="js/custom.js"></script>
+     
+     
+     <script>
+const canvas = document.getElementById("snow");
+const ctx = canvas.getContext("2d");
+
+let width = window.innerWidth;
+let height = window.innerHeight;
+
+canvas.width = width;
+canvas.height = height;
+
+let snowflakes = [];
+
+function createSnowflakes() {
+  for (let i = 0; i < 150; i++) {
+    snowflakes.push({
+      x: Math.random() * width,
+      y: Math.random() * height,
+      r: Math.random() * 4 + 1,
+      d: Math.random() * 1
+    });
+  }
+}
+
+function drawSnowflakes() {
+  ctx.clearRect(0, 0, width, height);
+  ctx.fillStyle = "white";
+  ctx.beginPath();
+  for (let i = 0; i < snowflakes.length; i++) {
+    let f = snowflakes[i];
+    ctx.moveTo(f.x, f.y);
+    ctx.arc(f.x, f.y, f.r, 0, Math.PI * 2, true);
+  }
+  ctx.fill();
+  moveSnowflakes();
+}
+
+function moveSnowflakes() {
+  for (let i = 0; i < snowflakes.length; i++) {
+    let f = snowflakes[i];
+    f.y += Math.pow(f.d, 2) + 1;
+    f.x += Math.sin(f.y * 0.01);
+
+    if (f.y > height) {
+      snowflakes[i] = {
+        x: Math.random() * width,
+        y: 0,
+        r: f.r,
+        d: f.d
+      };
+    }
+  }
+}
+
+function resize() {
+  width = window.innerWidth;
+  height = window.innerHeight;
+  canvas.width = width;
+  canvas.height = height;
+}
+
+window.addEventListener("resize", resize);
+
+createSnowflakes();
+setInterval(drawSnowflakes, 25);
+</script>
 
 </body>
 </html>
