--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@ Template 2098 Health
 http://www.tooplate.com/view/2098-health
 
 -->
-
+<link rel="stylesheet" href="css/tooplate-style.css">
+<link rel="stylesheet" href="css/dark.css">
+     
 <canvas id="snow"></canvas>
 
      <meta charset="UTF-8">
