--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ http://www.tooplate.com/view/2098-health
 
                     <div class="col-md-4 col-sm-6">
                          <!-- NEWS THUMB -->
-                         <div class="news-thumb wow fadeInUp" data-wow-delay="0.6s">
+                         <div class="news-thumb luxury-card wow fadeInUp" data-wow-delay="0.6s">
                               <a href="news-detail.html">
                                    <img src="images/news-image2.jpg" class="img-responsive" alt="">
                               </a>
