--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ http://www.tooplate.com/view/2098-health
                     <div class="clearfix"></div>
 
                     <div class="col-md-4 col-sm-6">
-                         <div class="team-thumb  wow fadeInUp" data-wow-delay="0.2s">
+                         <div class="team-thumb  luxury-card wow fadeInUp" data-wow-delay="0.2s">
                               <img src="https://cdn.discordapp.com/attachments/877239607362719744/1455907442633474121/IMG_8511.png?ex=69566ef7&is=69551d77&hm=7fb36e2b3a5ee0fa9f4a48eb5db52d404665efee21cd67b053864aae42665274&" class="img-responsive" alt="">
 
                                    <div class="team-info">
@@ -191,7 +191,7 @@ http://www.tooplate.com/view/2098-health
                     </div>
 
                     <div class="col-md-4 col-sm-6">
-                         <div class="team-thumb wow fadeInUp" data-wow-delay="0.4s">
+                         <div class="team-thumb luxury-card wow fadeInUp" data-wow-delay="0.4s">
                               <img src="https://cdn.discordapp.com/attachments/877239607362719744/1455907443602100256/IMG_8478.jpg?ex=69566ef8&is=69551d78&hm=dc40e87c1d1bce3308381e0f47409fde21917914af8437e4364ebd0c0ef3ce4b&" class="img-responsive" alt="">
 
                                    <div class="team-info">
@@ -212,7 +212,7 @@ http://www.tooplate.com/view/2098-health
                     </div>
 
                     <div class="col-md-4 col-sm-6">
-                         <div class="team-thumb wow fadeInUp" data-wow-delay="0.6s">
+                         <div class="team-thumb luxury-card wow fadeInUp" data-wow-delay="0.6s">
                               <img src="https://cdn.discordapp.com/attachments/877239607362719744/1455907443296178382/IMG_8482.jpg?ex=69566ef7&is=69551d77&hm=3f3b427b11cd175d47c528026dad23e5f2120621d569f2e4fb47fb91cca41d3a&" class="img-responsive" alt="">
 
                                    <div class="team-info">
@@ -250,7 +250,7 @@ http://www.tooplate.com/view/2098-health
 
                     <div class="col-md-4 col-sm-6">
                          <!-- NEWS THUMB -->
-                         <div class="news-thumb wow fadeInUp" data-wow-delay="0.4s">
+                         <div class="news-thumb luxury-card wow fadeInUp" data-wow-delay="0.4s">
                               <a href="news-detail.html">
                                    <img src="images/news-image1.jpg" class="img-responsive" alt="">
                               </a>
@@ -293,7 +293,7 @@ http://www.tooplate.com/view/2098-health
 
                     <div class="col-md-4 col-sm-6">
                          <!-- NEWS THUMB -->
-                         <div class="news-thumb wow fadeInUp" data-wow-delay="0.8s">
+                         <div class="news-thumb luxury-card wow fadeInUp" data-wow-delay="0.8s">
                               <a href="news-detail.html">
                                    <img src="images/news-image3.jpg" class="img-responsive" alt="">
                               </a>
