--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@ http://www.tooplate.com/view/2098-health
                               </a>
                               <div class="news-info">
                                    <span></span>
-                                   <h3><a href="news-detail.html">شەوانی ئازادی </a></h3>
+                                   <h3><a href="news-detail.html gold-animate">شەوانی ئازادی </a></h3>
                                    <p>لەدوای 12شەو مەردەکانی داخیلی کۆدەبنەو بەگۆرانی و مەقام پێشکەش کردن و لەگەل مورتەبات.</p>
                                    <div class="author">
                                         <img src="images/author-image.jpg" class="img-responsive" alt="">
