--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ http://www.tooplate.com/view/2098-health
                               <div class="news-info">
                                    <span></span>
                                    <h3>
-  <a href="news-detail.html" class="gold-animate">
+  <a href="news-detail.html" class="tag-modern">
     شەوانی ئازادی
   </a>
 </h3>
