--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@ http://www.tooplate.com/view/2098-health
                     <div class="col-md-12 col-sm-12">
                          <!-- SECTION TITLE -->
                          <div class="section-title wow fadeInUp kurdi-font" data-wow-delay="0.1s">
-                              <h2>کــافـێ</h2>
+                              <h2 class="tag-modern">کــافـێ</h2>
                          </div>
                     </div>
 
@@ -279,7 +279,7 @@ http://www.tooplate.com/view/2098-health
                               <div class="news-info">
                                    <span></span>
                                    <h3>
-  <a href="news-detail.html" class="tag-modern">
+  <a href="news-detail.html">
     شەوانی ئازادی
   </a>
 </h3>
