--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ http://www.tooplate.com/view/2098-health
 
                     <div class="col-md-6 col-sm-6">
                          <div class="about-info">
-                              <h2 class="wow fadeInUp" data-wow-delay="0.1s">گەنجە مەردەکان</h2>
+                              <h2 class="wow fadeInUp tag-modern" data-wow-delay="0.1s">گەنجە مەردەکان</h2>
                          </div>
                     </div>
 
