--- a/index.html
+++ b/index.html
@@ -34,13 +34,10 @@ http://www.tooplate.com/view/2098-health
 <body id="top" data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
      <!-- PRE LOADER -->
-     <section class="preloader">
-          <div class="spinner">
-
-               <span class="spinner-rotate"></span>
-               
-          </div>
-     </section>
+    <!-- PRELOADER -->
+<div class="preloader">
+  <div class="crown-loader">👑</div>
+</div>
 
 
      <!-- HEADER -->
