--- a/index.html
+++ b/index.html
@@ -33,10 +33,14 @@ http://www.tooplate.com/view/2098-health
 </head>
 <body id="top" data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
-     <!-- PRE LOADER -->
-    <!-- PRELOADER -->
-<div class="preloader">
-  <div class="crown-loader">👑</div>
+     <!-- PRELOADER -->
+<div class="gold-preloader">
+  <div class="loader-content">
+    <img src="logo.png" alt="Logo" class="loader-logo">
+    <div class="loader-bar">
+      <span></span>
+    </div>
+  </div>
 </div>
 
 
