--- a/index.html
+++ b/index.html
@@ -465,7 +465,11 @@ http://www.tooplate.com/view/2098-health
      <script src="js/owl.carousel.min.js"></script>
      <script src="js/custom.js"></script>
      
-     
+     <script>
+window.addEventListener("load", function () {
+  document.querySelector(".gold-preloader").style.display = "none";
+});
+</script>
 
 </body>
 </html>
