--- a/index.html
+++ b/index.html
@@ -33,12 +33,15 @@ http://www.tooplate.com/view/2098-health
 </head>
 <body id="top" data-spy="scroll" data-target=".navbar-collapse" data-offset="50">
 
-     <!-- PRELOADER -->
-<div class="gold-preloader">
-  <div class="loader-content">
+   <!-- PRELOADER -->
+<div id="preloader">
+  <div class="loader-box">
+    <!-- Logo -->
     <img src="logo.png" alt="Logo" class="loader-logo">
-    <div class="loader-bar">
-      <span></span>
+
+    <!-- Progress bar -->
+    <div class="progress">
+      <span class="progress-bar"></span>
     </div>
   </div>
 </div>
@@ -466,11 +469,11 @@ http://www.tooplate.com/view/2098-health
      <script src="js/custom.js"></script>
      
 <script>
-window.addEventListener("load", function () {
-  setTimeout(function () {
-    document.querySelector(".preloader").classList.add("hide");
-  }, 2000); // 2000ms = 2 چرکە
-});
+  window.addEventListener("load", function () {
+    setTimeout(() => {
+      document.getElementById("preloader").classList.add("hide");
+    }, 2500); // ماوەی لۆد (2.5 چرکە)
+  });
 </script>
 
 
