--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ http://www.tooplate.com/view/2098-health
 <div id="preloader">
   <div class="loader-box">
     <!-- Logo -->
-    <img src="https://cdn.discordapp.com/attachments/877239607362719744/1456270006265315368/IMG_8841.png?ex=6957c0a1&is=69566f21&hm=fd37f3ba0230faed8f2c9c3de26f238cc73e458c620864a4f3a85856d77c0ef8&" alt="Logo" class="loader-logo">
+    <img src="images/Sher.PNG" alt="Logo" class="loader-logo">
 
     <!-- Progress bar -->
     <div class="progress">
