--- a/index.html
+++ b/index.html
@@ -72,12 +72,35 @@ http://www.tooplate.com/view/2098-health
                          <span class="icon icon-bar"></span>
                     </button>
 
-                    <!-- lOGO TEXT HERE -->
-                    <a href="index.html" class="navbar-brand"><i class="fa fa-home kurdi-font"></i> مەڵبەندی داخیلی ئازادی کوران </a>
-               </div>
+<!-- MENU BUTTON -->
+<div class="menu-btn" onclick="openMenu()">☰</div>
 
-               <!-- MENU LINKS -->
-               <div class="collapse navbar-collapse">
+<!-- OVERLAY -->
+<div id="overlay" onclick="closeMenu()"></div>
+
+<!-- SIDE MENU -->
+<div id="side-menu">
+  <div class="menu-header">
+    <span>Menu</span>
+    <button onclick="closeMenu()">✕</button>
+  </div>
+
+  <ul class="menu-list kurdi-font">
+     <li><a href="#top" class="smoothScroll">سەرەکی</a></li>
+                         <li><a href="#about" class="smoothScroll">ژیانی داخیلی</a></li>
+                         <li><a href="#team" class="smoothScroll">گەنجانی داخیلی</a></li>
+                         <li><a href="#news" class="smoothScroll">کــافــێ</a></li>
+                         <li><a href="#google-map" class="smoothScroll">زانیاری</a></li>
+                         <li class="appointment-btn"><a href="#appointment">خۆت تۆماربکە</a></li>
+                    </ul>
+</div>
+
+                    <!-- lOGO TEXT HERE 
+                    <a href="index.html" class="navbar-brand"><i class="fa fa-home kurdi-font"></i> مەڵبەندی داخیلی ئازادی کوران </a>
+               </div> -->
+
+               <!-- MENU LINKS 
+       /*        <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right kurdi-font">
                          <li><a href="#top" class="smoothScroll">سەرەکی</a></li>
                          <li><a href="#about" class="smoothScroll">ژیانی داخیلی</a></li>
@@ -89,7 +112,7 @@ http://www.tooplate.com/view/2098-health
                </div>
 
           </div>
-     </section>
+     </section> -->
 
 
      <!-- HOME -->
@@ -474,6 +497,18 @@ http://www.tooplate.com/view/2098-health
       document.getElementById("preloader").classList.add("hide");
     }, 2500); // ماوەی لۆد (2.5 چرکە)
   });
+</script>
+
+<script>
+function openMenu() {
+  document.getElementById("side-menu").classList.add("active");
+  document.getElementById("overlay").classList.add("active");
+}
+
+function closeMenu() {
+  document.getElementById("side-menu").classList.remove("active");
+  document.getElementById("overlay").classList.remove("active");
+}
 </script>
 
 
