--- a/index.html
+++ b/index.html
@@ -508,13 +508,11 @@ http://www.tooplate.com/view/2098-health
 
 <script>
 function openMenu() {
-  document.getElementById("side-menu").classList.add("active");
-  document.getElementById("overlay").classList.add("active");
+  document.getElementById("sideMenu").classList.add("active");
 }
 
 function closeMenu() {
-  document.getElementById("side-menu").classList.remove("active");
-  document.getElementById("overlay").classList.remove("active");
+  document.getElementById("sideMenu").classList.remove("active");
 }
 </script>
 
