--- a/index.html
+++ b/index.html
@@ -75,38 +75,17 @@ http://www.tooplate.com/view/2098-health
                          <span class="icon icon-bar"></span>
                     </button>
 -->
-<!-- MENU BUTTON 
+<!-- MENU BUTTON-->
 <div class="menu-btn" onclick="openMenu()">☰</div>
 
-<!-- OVERLAY 
+<!-- OVERLAY -->
 <div id="overlay" onclick="closeMenu()"></div>
--->
 
-
-<!-- MENU BUTTON -->
-<div class="menu-btn" onclick="openMenu()">☰</div>
-
-<!-- SLIDE MENU -->
-<div id="sideMenu" class="side-menu">
-  <span class="close-btn" onclick="closeMenu()">✕</span>
-
-  <ul>
-
-  <ul class="menu-list kurdi-font">
-     <li><a href="#top" class="smoothScroll">سەرەکی</a></li>
-                         <li><a href="#about" class="smoothScroll">ژیانی داخیلی</a></li>
-                         <li><a href="#team" class="smoothScroll">گەنجانی داخیلی</a></li>
-                         <li><a href="#news" class="smoothScroll">کــافــێ</a></li>
-                         <li><a href="#google-map" class="smoothScroll">زانیاری</a></li>
-                         <li class="appointment-btn"><a href="#appointment">خۆت تۆماربکە</a></li>
-                    </ul>
-</div>
-
-                    <!-- lOGO TEXT HERE 
+                    <!-- lOGO TEXT HERE -->
                     <a href="index.html" class="navbar-brand"><i class="fa fa-home kurdi-font"></i> مەڵبەندی داخیلی ئازادی کوران </a>
-               </div> -->
+               </div> 
 
-               <!-- MENU LINKS 
+               <!-- MENU LINKS -->
        /*        <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right kurdi-font">
                          <li><a href="#top" class="smoothScroll">سەرەکی</a></li>
@@ -119,7 +98,7 @@ http://www.tooplate.com/view/2098-health
                </div>
 
           </div>
-     </section> -->
+     </section> 
 
 
      <!-- HOME -->
@@ -506,15 +485,6 @@ http://www.tooplate.com/view/2098-health
   });
 </script>
 
-<script>
-function openMenu() {
-  document.getElementById("sideMenu").classList.add("active");
-}
-
-function closeMenu() {
-  document.getElementById("sideMenu").classList.remove("active");
-}
-</script>
 
 
 </body>
