--- a/index.html
+++ b/index.html
@@ -67,14 +67,13 @@ http://www.tooplate.com/view/2098-health
      <!-- MENU -->
      <section class="navbar navbar-default navbar-static-top" role="navigation">
           <div class="container">
-<!--
                <div class="navbar-header">
                     <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                          <span class="icon icon-bar"></span>
                          <span class="icon icon-bar"></span>
                          <span class="icon icon-bar"></span>
                     </button>
--->
+                    
 <!-- MENU BUTTON-->
 <div class="menu-btn" onclick="openMenu()">☰</div>
 
@@ -86,7 +85,7 @@ http://www.tooplate.com/view/2098-health
                </div> 
 
                <!-- MENU LINKS -->
-       /*        <div class="collapse navbar-collapse">
+               <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right kurdi-font">
                          <li><a href="#top" class="smoothScroll">سەرەکی</a></li>
                          <li><a href="#about" class="smoothScroll">ژیانی داخیلی</a></li>
