--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ http://www.tooplate.com/view/2098-health
                          <li><a href="#team" class="smoothScroll">گەنجانی داخیلی</a></li>
                          <li><a href="#news" class="smoothScroll">کــافــێ</a></li>
                          <li><a href="#google-map" class="smoothScroll">زانیاری</a></li>
-                         <li><a href="#game.html" class="smoothScroll">یاریکردن</a></li>
+                         <li><a href="game.html" class="smoothScroll">یاریکردن</a></li>
                          <li class="appointment-btn"><a href="#appointment">خۆت تۆماربکە</a></li>
                     </ul>
                </div>
