--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ http://www.tooplate.com/view/2098-health
 
                     <div class="col-md-4 col-sm-6">
                          <div class="team-thumb  luxury-card wow fadeInUp" data-wow-delay="0.2s">
-                              <img src="https://cdn.discordapp.com/attachments/877239607362719744/1455907442633474121/IMG_8511.png?ex=69566ef7&is=69551d77&hm=7fb36e2b3a5ee0fa9f4a48eb5db52d404665efee21cd67b053864aae42665274&" class="img-responsive" alt="">
+                              <img src="images/card1.jpg" class="img-responsive" alt="team">
 
                                    <div class="team-info">
                                         <h3>بایز بنەسڵاوەی</h3>
@@ -200,8 +200,7 @@ http://www.tooplate.com/view/2098-health
 
                     <div class="col-md-4 col-sm-6">
                          <div class="team-thumb luxury-card wow fadeInUp" data-wow-delay="0.4s">
-                              <img src="https://cdn.discordapp.com/attachments/877239607362719744/1455907443602100256/IMG_8478.jpg?ex=69566ef8&is=69551d78&hm=dc40e87c1d1bce3308381e0f47409fde21917914af8437e4364ebd0c0ef3ce4b&" class="img-responsive" alt="">
-
+                             <img src="images/card2.jpg" class="img-responsive" alt="team">
                                    <div class="team-info">
                                         <h3>مەلا جیهادی زێباری</h3>
                                         <p>ئەمەش گەنجە خواناسەکەی داخیلی، بە رەسەنەکەی داخیلی ناسراوە گەنجێکی خۆشەویستە رێزمان هەیە بۆی </p>
@@ -216,7 +215,7 @@ http://www.tooplate.com/view/2098-health
 
                     <div class="col-md-4 col-sm-6">
                          <div class="team-thumb luxury-card wow fadeInUp" data-wow-delay="0.6s">
-                              <img src="https://cdn.discordapp.com/attachments/877239607362719744/1455907443296178382/IMG_8482.jpg?ex=69566ef7&is=69551d77&hm=3f3b427b11cd175d47c528026dad23e5f2120621d569f2e4fb47fb91cca41d3a&" class="img-responsive" alt="">
+                             <img src="images/card3.jpg" class="img-responsive" alt="team">
 
                                    <div class="team-info">
                                         <h3>وەلید ئەوائیل</h3>
