--- a/index.html
+++ b/index.html
@@ -180,21 +180,17 @@ http://www.tooplate.com/view/2098-health
                     <div class="col-md-4 col-sm-6">
                          <div class="team-thumb  luxury-card wow fadeInUp" data-wow-delay="0.2s">
                               <img src="images/card1.jpg" class="img-responsive" alt="team">
-
                                    <div class="team-info">
                                         <h3>بایز بنەسڵاوەی</h3>
                                         <p>گەنجە دەم بەپێکەنین و خەماویەکەی داخیلی کاک بایزی بنەسلاوەی کورێکی خۆشــە وێیستە سڵاو ریزمان هیە بۆی، ماتۆر سوارە</p>
-                                        <div class="team-contact-info">
-                                                  <p><i class="fa fa-snapchat"></i> <a href="#"> ...  </a></p>
-                                        </div>
                                         <ul class="social-icon">
-                                             <li><a href="#" class="fa fa-snapchat"</a></li>
-                                             <li><a href="#" class="fa fa-envelope-o"></a></li>
-                                        </ul>
-                                   </div>
-
-                         </div>
-                    </div>
+                <li><a href="#" class="fa fa-snapchat"></a></li>
+                <li><a href="#" class="fa fa-whatsapp"></a></li>
+                <li><a href="#" class="fa fa-envelope-o"></a></li>
+            </ul>
+        </div>
+    </div>
+</div
                                             
                               
 
