--- a/index.html
+++ b/index.html
@@ -177,10 +177,12 @@ http://www.tooplate.com/view/2098-health
 
                     <div class="clearfix"></div>
 
-                    <div class="col-md-4 col-sm-6">
-                         <div class="team-thumb  luxury-card wow fadeInUp" data-wow-delay="0.2s">
-                              <img src="images/card1.jpg" class="img-responsive" alt="team">
-                                   <div class="team-info">
+                 <div class="cards-wrapper">
+
+    <div class="card-item">
+        <div class="card">
+            <img src="images/card1.jpg" alt="">
+            <div class="card-body">
                                         <h3>بایز بنەسڵاوەی</h3>
                                         <p>گەنجە دەم بەپێکەنین و خەماویەکەی داخیلی کاک بایزی بنەسلاوەی کورێکی خۆشــە وێیستە سڵاو ریزمان هیە بۆی، ماتۆر سوارە</p>
                                         <ul class="social-icon">
