--- a/index.html
+++ b/index.html
@@ -196,10 +196,12 @@ http://www.tooplate.com/view/2098-health
                                             
                               
 
-                    <div class="col-lg-4 col-md-6 col-sm-12 card-item">
-                         <div class="team-thumb luxury-card wow fadeInUp" data-wow-delay="0.4s">
-                             <img src="images/card2.jpg" class="img-responsive" alt="team">
-                                   <div class="team-info">
+                  <div class="cards-wrapper">
+
+    <div class="card-item">
+        <div class="card">
+            <img src="images/card1.jpg" alt="">
+            <div class="card-body">
                                         <h3>مەلا جیهادی زێباری</h3>
                                         <p>ئەمەش گەنجە خواناسەکەی داخیلی، بە رەسەنەکەی داخیلی ناسراوە گەنجێکی خۆشەویستە رێزمان هەیە بۆی </p>
                                         <div class="team-contact-info">
