--- a/index.html
+++ b/index.html
@@ -196,12 +196,11 @@ http://www.tooplate.com/view/2098-health
                                             
                               
 
-                  <div class="cards-wrapper">
+                   <div class="col-lg-4 col-md-6 col-sm-12 card-item">
+                         <div class="team-thumb luxury-card wow fadeInUp" data-wow-delay="0.6s">
+                             <img src="images/card3.jpg" class="img-responsive" alt="team">
 
-    <div class="card-item">
-        <div class="card">
-            <img src="images/card1.jpg" alt="">
-            <div class="card-body">
+                                   <div class="team-info">
                                         <h3>مەلا جیهادی زێباری</h3>
                                         <p>ئەمەش گەنجە خواناسەکەی داخیلی، بە رەسەنەکەی داخیلی ناسراوە گەنجێکی خۆشەویستە رێزمان هەیە بۆی </p>
                                         <div class="team-contact-info">
