--- a/index.html
+++ b/index.html
@@ -177,12 +177,11 @@ http://www.tooplate.com/view/2098-health
 
                     <div class="clearfix"></div>
 
-                 <div class="cards-wrapper">
+                <div class="col-lg-4 col-md-6 col-sm-12 card-item">
+                         <div class="team-thumb luxury-card wow fadeInUp" data-wow-delay="0.6s">
+                             <img src="images/card1.jpg" class="img-responsive" alt="team">
 
-    <div class="card-item">
-        <div class="card">
-            <img src="images/card1.jpg" alt="">
-            <div class="card-body">
+                                   <div class="team-info">
                                         <h3>بایز بنەسڵاوەی</h3>
                                         <p>گەنجە دەم بەپێکەنین و خەماویەکەی داخیلی کاک بایزی بنەسلاوەی کورێکی خۆشــە وێیستە سڵاو ریزمان هیە بۆی، ماتۆر سوارە</p>
                                         <ul class="social-icon">
@@ -198,7 +197,7 @@ http://www.tooplate.com/view/2098-health
 
                    <div class="col-lg-4 col-md-6 col-sm-12 card-item">
                          <div class="team-thumb luxury-card wow fadeInUp" data-wow-delay="0.6s">
-                             <img src="images/card3.jpg" class="img-responsive" alt="team">
+                             <img src="images/card2.jpg" class="img-responsive" alt="team">
 
                                    <div class="team-info">
                                         <h3>مەلا جیهادی زێباری</h3>
