--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ http://www.tooplate.com/view/2098-health
                              <img src="images/card3.jpg" class="img-responsive" alt="team">
                                    <div class="team-info">
                                         <h3>  وەلیدی ئەوائیل</h3>
-                                          <p>ئەە گەنجەی هەموومان خۆشمان دەوێت تەمەنی 17 ساڵە، گەنجێکی ناسراوە لەداخیلی رێزمان هەیە بۆی</p>
+                                          <p> ئەم گەنجەی هەموومان خۆشمان دەوێت تەمەنی 17 ساڵە، گەنجێکی ناسراوە لەداخیلی رێزمان هەیە بۆی </p>
                                       <div class="team-contact-info">
                                              <p><i class="fa fa-snapchat"></i> <a href="#"> ...  </a></p>
                                         </div>
