--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ http://www.tooplate.com/view/2098-health
                                    <div class="team-info">
                                         <h3>مەلا جیهادی زێباری</h3>
                                         <p>ئەمەش گەنجە خواناسەکەی داخیلی، بە رەسەنەکەی داخیلی ناسراوە گەنجێکی خۆشەویستە رێزمان هەیە بۆی </p>
-                                      
+                                        <div class="team-contact-info">
                                              <p>... </p>
                                         </div>
                                         <ul class="social-icon">
