--- a/index.html
+++ b/index.html
@@ -201,6 +201,24 @@ http://www.tooplate.com/view/2098-health
                                    <div class="team-info">
                                         <h3>مەلا جیهادی زێباری</h3>
                                         <p>ئەمەش گەنجە خواناسەکەی داخیلی، بە رەسەنەکەی داخیلی ناسراوە گەنجێکی خۆشەویستە رێزمان هەیە بۆی </p>
+                                        <ul class="social-icon">
+  <li>
+    <a href="https://snapchat.com/add/USERNAME" target="_blank"
+       class="fa fa-snapchat"></a>
+  </li>
+
+  <li>
+    <a href="https://t.me/USERNAME" target="_blank"
+       class="fa fa-telegram"></a>
+  </li>
+
+  <li>
+    <a href="https://instagram.com/USERNAME" target="_blank"
+       class="fa fa-instagram"></a>
+  </li>
+</ul>
+                                        
+                                        
                                         <div class="team-contact-info">
                                              <p>... </p>
                                         </div>
